# TPI-BaseDeDatos

./: .gitignore  :w  Cargo.toml  README.md  a.txt  entregauni  output_file.sql  test.sql  test.txt
.sqlx/: query-3e4cce3c933de8a3f9d84c55ff9ad5f56b27020caf30dea25c975ef32a507475.json  query-44643b774b80e3c99a5b228b59a82035aa807f9f76612182a42348c21abd9fe4.json  query-45af8724e93cc4fb8212b48aef63e9030cb31eadf6c17117ef9b9f3cf3904c8a.json  query-497a5c159f6636a13456c312d3db34d89852f74bd7284dd91e74ce3b6c842cfb.json  query-51ad2419b1cba23760605ef24728b752f3e8a9e109fe50a59d79779a2b3963d3.json  query-60539755641659c4bf94eea47d2d5cf9f07846871f3b73c39a07857a0e568300.json  query-6f14f83c4ffbcc926d95d87fcd0e7767d383c919bbb07b7dd42e4c5a8b2d2837.json  query-81fdc0b5e9460d182c369820985e035cd92481fc06d1f85ddc754a7c6d180924.json  query-b244e5d30484184353fcbebec9be4997e50e0e2fb4dfd7b0ff0204d77b3e8808.json  query-b8542e456b9e951790644ae90fac08cefe6e87f7d57edae39e4cb1c6ab96a7ca.json  query-c9ae306e38401326d8f6cff3cbd4c76eb07bdfdc7e295f75e3b9b2cb439ebe5f.json  query-ca92d72cb2331e292977edc954c1fcbd4908f686e592ed713353f5ae4c439f06.json  query-fddb219719c359339de45926070b5ed68b483b97b10db583412f78b72c3d445e.json
datasets/: idiomas.csv
dbdata/: Cargo.toml
dbdata/dbdata_derive/: Cargo.toml
dbdata/dbdata_derive/src/: lib.rs
dbdata/src/: lib.rs
migrations/: 20240606032226_cargar_tablas.sql
scripts/: compilar_binarios.sh
src/: datasets.rs  db_cargasfk.rs  db_tablas.rs  funciones_de_carga.rs  lib.rs  main.rs  main2.rs  tablas.rs
