[package]
name = "carga_datos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqlx"
path = "src/main.rs"

[dependencies]
bigdecimal = "0.4.3"
colored = "2.1.0"
dotenvy = "0.15.7"
fake = { version = "2.9.2", features = ["time", "derive"] }
rand = { version = "0.8.5", features = ["small_rng", "std_rng"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "macros", "bigdecimal", "time"] }
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
dbdata = { path = "./dbdata" }
dbdata_derive = { path = "./dbdata/dbdata_derive" }
once_cell = "1.19.0"
clap = { version = "4.5.7", features = ["derive"] }
